rm package lock and update repo url

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git.playngo.com/users/michael.natividad_playngo.com/repos/keyboard-warrior/browse"
+    "url": "https://github.com/muscet/keyboard-warrior"
   },
   "author": "",
   "license": "ISC",
